# amor-configuration-files

./: .gitignore  CMakeLists.txt  README.md
cmake/template/: AMOR_CONFIGURATION_FILESConfig.cmake.in
scripts/: CMakeLists.txt
scripts/bash/: amorSim
scripts/gnome/: amor-apps-sudo.desktop  amor-apps.desktop
share/: CMakeLists.txt
share/amorBase/: CMakeLists.txt
share/amorSimBase/: CMakeLists.txt
share/amorSimBase/scripts/: amorSimBase.xml
share/amorTools/: CMakeLists.txt  doc.dox
share/amorTools/scripts/: amorTools.xml  sensor_reader.py  sensors.xml
share/applications/: amorBase.xml  amorSimBase.xml  amorTools.xml
share/contexts/kinematics/: amor-armKinematics.ini
share/kinematics/: CMakeLists.txt  armKinematics.ini
share/yarpmotorgui/: amor-yarpmotorgui.ini
